force-app/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description>A Custom Quote Object</description>
    <label>Quote</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>