force-app/main/default/objects/Quote__c/fields/Accommodation_and_Meal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_and_Meal_Notes__c</fullName>
    <label>Accommodation and Meal Notes</label>
    <type>TextArea</type>
</CustomField>