force-app/main/default/objects/Quote__c/fields/Air_Travel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Air_Travel_Notes__c</fullName>
    <description>Notes that will be added to the Quote when Air Travel is required</description>
    <label>Air Travel Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>