force-app/main/default/objects/Quote__c/fields/Amount_of_People__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_People__c</fullName>
    <inlineHelpText>This is required when choosing to display technical fees on the Quote, so that the correct Technical fee is displayed</inlineHelpText>
    <label>Amount of People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Amount_of_People</valueSetName>
    </valueSet>
</CustomField>