force-app/main/default/objects/Quote__c/fields/Artist_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Artist_Name_s__c</fullName>
    <description>Populated by the Create Quick Quote Flow</description>
    <inlineHelpText>Contains a List f Artists Contained in this Quote</inlineHelpText>
    <label>Artist Name(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>