force-app/main/default/objects/Quote__c/fields/Date_of_Perfomance__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Perfomance__c</fullName>
    <inlineHelpText>This can be filled in during the quick quote stage to automatically transfer to the Quick Booking form flow</inlineHelpText>
    <label>Date of Perfomance</label>
    <type>Date</type>
</CustomField>