force-app/main/default/objects/Quote__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>Quote_To__r.FirstName &amp;&quot; &quot;&amp;Quote_To__r.LastName&amp;&quot; &quot;&amp; TEXT(Quote_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>