force-app/main/default/objects/Quote__c/fields/Discountable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discountable_Amount__c</fullName>
    <description>The sum of discountable line items</description>
    <label>Discountable Amount</label>
    <summarizedField>Quote_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Quote_Line_Item__c.Include_in_discount__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>