force-app/main/default/objects/Quote__c/fields/Include_Extras__c.field-meta.xml
<CustomField>
    <fullName>Include_Extras__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you would like to include Extras, such as a DJ or Stage to the Quote PDF</inlineHelpText>
    <label>Include Extras</label>
    <type>Checkbox</type>
</CustomField>