force-app/main/default/objects/Quote__c/fields/Include_Technical_fee__c.field-meta.xml
<CustomField>
    <fullName>Include_Technical_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you would like to include the Technical Fee in the Quick Quote</inlineHelpText>
    <label>Include Technical fee</label>
    <type>Checkbox</type>
</CustomField>