force-app/main/default/objects/Quote__c/fields/Includes_VAT__c.field-meta.xml
<CustomField>
    <fullName>Includes_VAT__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Includes VAT</label>
    <type>Checkbox</type>
</CustomField>