force-app/main/default/objects/Quote__c/fields/PDF_Template_Type__c.field-meta.xml
<CustomField>
    <fullName>PDF_Template_Type__c</fullName>
    <formula>IF(
    NOT Include_Technical_fee__c &amp;&amp; NOT Include_Extras__c, &quot;Simple&quot;,
    IF(
        Include_Technical_fee__c &amp;&amp; NOT Include_Extras__c, &quot;Technical&quot;,
        IF(
            NOT Include_Technical_fee__c &amp;&amp; Include_Extras__c, &quot;Extras&quot;,
            &quot;Complex&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Template Type</label>
    <type>Text</type>
</CustomField>