force-app/main/default/objects/Quote__c/fields/Quote_Agent__c.field-meta.xml
<CustomField>
    <fullName>Quote_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Agent that created the Quote</inlineHelpText>
    <label>Quote Agent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Agent__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Quote Agent)</relationshipLabel>
    <relationshipName>Quotes_Agent</relationshipName>
    <type>Lookup</type>
</CustomField>