force-app/main/default/objects/Quote__c/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>