force-app/main/default/objects/Quote__c/fields/Quote_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Quote_From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote From Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Quote From Account)</relationshipLabel>
    <relationshipName>Quotes_Sent</relationshipName>
    <type>Lookup</type>
</CustomField>