force-app/main/default/objects/Quote__c/fields/Quote_To__c.field-meta.xml
<CustomField>
    <fullName>Quote_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contactperson receiving the quote</description>
    <inlineHelpText>The contactperson receiving the quote</inlineHelpText>
    <label>Quote To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please add or create an organiser</errorMessage>
        <filterItems>
            <field>Contact.Organizer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>