force-app/main/default/objects/Quote__c/fields/Quote_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Quote_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>