force-app/main/default/objects/Quote__c/fields/Sign_request__c.field-meta.xml
<CustomField>
    <fullName>Sign_request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sign request</label>
    <referenceTo>cadmus_sign2__Sign_request__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>