force-app/main/default/objects/Quote__c/fields/Sign_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Sign_Request_Name__c</fullName>
    <description>The field used by Sign Butler to create the Sign Request Name</description>
    <formula>Quote_To__r.FirstName &amp;&quot; &quot;&amp;Quote_To__r.LastName&amp;&quot; - &quot;&amp; Town_or_City__r.Name &amp;&quot; (&quot;&amp;Artist_Name_s__c&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sign Request Name</label>
    <type>Text</type>
</CustomField>