force-app/main/default/objects/Quote__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <description>The sum of all Quote Line Items</description>
    <label>Subtotal</label>
    <summarizedField>Quote_Line_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Quote_Line_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>