force-app/main/default/objects/Quote__c/fields/Total_Artist_Travel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Artist_Travel_Fee__c</fullName>
    <inlineHelpText>The total artist travel costs</inlineHelpText>
    <label>Total Artist Travel Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>