force-app/main/default/objects/Quote__c/fields/Total_Excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Excl_VAT__c</fullName>
    <description>Total after discount</description>
    <formula>Subtotal__c - Discount_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Excl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>