force-app/main/default/objects/Quote__c/fields/Total_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Incl_VAT__c</fullName>
    <description>Total Payable plus VAT</description>
    <formula>Total_Excl_VAT__c + VAT_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total. (Incl VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>