force-app/main/default/objects/Quote__c/fields/Total_Performance_fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Performance_fee__c</fullName>
    <inlineHelpText>The Total performance fee</inlineHelpText>
    <label>Total Performance fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>