force-app/main/default/objects/Quote__c/fields/Total_Technical_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Technical_Fee__c</fullName>
    <inlineHelpText>The total technical fee</inlineHelpText>
    <label>Total Technical Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>