force-app/main/default/objects/Quote__c/fields/Total_Travel_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Costs__c</fullName>
    <formula>Total_Artist_Travel_Fee__c +  Total_Travel_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The combined travel fees for artists and technical</inlineHelpText>
    <label>Total Travel Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>