force-app/main/default/objects/Quote__c/fields/Total_Travel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Fee__c</fullName>
    <inlineHelpText>The Total Technical Travel costs for this quote</inlineHelpText>
    <label>Total Technical Travel Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>