force-app/main/default/objects/Quote__c/fields/Town_or_City__c.field-meta.xml
<CustomField>
    <fullName>Town_or_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The town or city the travel costs are based on</inlineHelpText>
    <label>Town or City</label>
    <referenceTo>Town__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>