force-app/main/default/objects/Quote__c/fields/Travel_By__c.field-meta.xml
<CustomField>
    <fullName>Travel_By__c</fullName>
    <description>Method of transport indicated when creating a quick quote. This determines whether travel fees are added to the quote</description>
    <label>Travel By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Road</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>