force-app/main/default/objects/Quote__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <description>The day the quote expires. 14 Days from Quote Date</description>
    <formula>Quote_Date__c + 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>