force-app/main/default/objects/Quote__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <description>The percentage charged as VAT</description>
    <formula>IF(CreatedDate &lt; DATETIMEVALUE(DATE(2025, 5, 1)),
$Setup.VocalEventsSettings__c.VAT__c,
$Setup.VocalEventsSettings__c.VAT_Post_May_2025__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>