force-app/main/default/objects/Quote__c/recordTypes/Quick_Quote.recordType-meta.xml
<RecordType>
    <fullName>Quick_Quote</fullName>
    <active>true</active>
    <description>Used for creating quick quotes using Artist Fee Definitions</description>
    <label>Quick Quote</label>
</RecordType>