force-app/main/default/objects/Quote__c/recordTypes/Standard_Quote.recordType-meta.xml
<RecordType>
    <fullName>Standard_Quote</fullName>
    <active>true</active>
    <description>Used for creating standard quotes using quote line items</description>
    <label>Standard Quote</label>
</RecordType>