force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Artist_Name_s__c</columns>
    <columns>Quote_Agent__c</columns>
    <columns>Description__c</columns>
    <columns>Town_or_City__c</columns>
    <columns>Valid_Until__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Artist_Name_s__c</field>
        <operation>equals</operation>
        <value>Hamilton Wessels</value>
    </filters>
    <label>All</label>
</ListView>