force-app/main/default/objects/Quote__c/listViews/Annarie_s_Quotes.listView-meta.xml
<ListView>
    <fullName>Annarie_s_Quotes</fullName>
    <columns>NAME</columns>
    <columns>Artist_Name_s__c</columns>
    <columns>Quote_Agent__c</columns>
    <columns>Description__c</columns>
    <columns>Town_or_City__c</columns>
    <columns>Valid_Until__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quote_Agent__c</field>
        <operation>equals</operation>
        <value>Irma Portheine</value>
    </filters>
    <label>Irma Quotes</label>
</ListView>