force-app/main/default/objects/Quote__c/listViews/Lianie_May.listView-meta.xml
<ListView>
    <fullName>Lianie_May</fullName>
    <columns>NAME</columns>
    <columns>Artist_Name_s__c</columns>
    <columns>Quote_Agent__c</columns>
    <columns>Description__c</columns>
    <columns>Town_or_City__c</columns>
    <columns>Valid_Until__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Artist_Name_s__c</field>
        <operation>equals</operation>
        <value>Lianie May</value>
    </filters>
    <label>Lianie May</label>
</ListView>